[package]
name = "alternating-iter"
version = "0.1.0"
edition = "2021"
license = "MIT-0"
description = "Provide an iterator adaptor which alternate between 2 iterators."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
